fix particle transparency